--- a/ui_mainwindow.ui
+++ b/ui_mainwindow.ui
@@ -289,8 +289,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>172</width>
-            <height>515</height>
+            <width>81</width>
+            <height>28</height>
            </rect>
           </property>
           <widget class="QWidget" name="gridLayoutWidget_12">
@@ -519,14 +519,14 @@
         </widget>
        </item>
        <item row="20" column="0" colspan="2">
-        <widget class="QPushButton" name="saveSettings_pushButton">
+        <widget class="QPushButton" name="saveUEBSettings_pushButton">
          <property name="text">
           <string>Einstellungen in Datei speichern</string>
          </property>
         </widget>
        </item>
        <item row="20" column="2">
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="loadUEBSettings_pushButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
            <horstretch>0</horstretch>
@@ -1683,8 +1683,8 @@ DOS mismatch threshold</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>1120</width>
-            <height>520</height>
+            <width>81</width>
+            <height>28</height>
            </rect>
           </property>
           <widget class="QLabel" name="terminal_textlabel">
@@ -1752,8 +1752,8 @@ DOS mismatch threshold</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>1101</width>
-            <height>517</height>
+            <width>405</width>
+            <height>331</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="scrollArea_gridLayout_Transmission">
@@ -2150,7 +2150,7 @@ DOS mismatch threshold</string>
      <x>0</x>
      <y>0</y>
      <width>1199</width>
-     <height>26</height>
+     <height>30</height>
     </rect>
    </property>
   </widget>
