--- a/ui_parameter_dialog.ui
+++ b/ui_parameter_dialog.ui
@@ -1,49 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>NewParameterDialog</class>
- <widget class="QDialog" name="NewParameterDialog">
+ <class>TransmissionParameterDialog</class>
+ <widget class="QDialog" name="TransmissionParameterDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>602</width>
-    <height>94</height>
+    <width>714</width>
+    <height>408</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="gridLayoutWidget">
+  <widget class="QWidget" name="formLayoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>601</width>
-     <height>91</height>
+     <width>711</width>
+     <height>401</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="0">
-     <spacer name="horizontalSpacer_3">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>ID</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
+    <item row="0" column="1">
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -56,14 +36,42 @@
       </property>
      </spacer>
     </item>
-    <item row="0" column="1" colspan="4">
+    <item row="0" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>CSV Spaltenname</string>
+       <string>Verfügbare IDs</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="2">
+    <item row="0" column="9">
+     <widget class="QPushButton" name="addNewUserID">
+      <property name="text">
+       <string>Eigene Parameter
+hinzufügen</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="3">
+     <spacer name="horizontalSpacer_4">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="6">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Übertragene IDs</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="7">
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -76,40 +84,119 @@
       </property>
      </spacer>
     </item>
-    <item row="3" column="5">
-     <widget class="QPushButton" name="OK_pushButton">
-      <property name="text">
-       <string>OK</string>
+    <item row="1" column="6" colspan="4">
+     <widget class="QScrollArea" name="usedID_scrollArea">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOn</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOn</enum>
+      </property>
+      <property name="widgetResizable">
+       <bool>true</bool>
+      </property>
+      <widget class="QWidget" name="scrollAreaWidgetContents_2">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>315</width>
+         <height>304</height>
+        </rect>
+       </property>
+      </widget>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QSpinBox" name="ID_Dialog_spinBox">
-      <property name="minimum">
-       <number>1</number>
+    <item row="1" column="0" rowspan="2" colspan="4">
+     <widget class="QScrollArea" name="availableID_scrollArea">
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOn</enum>
       </property>
-      <property name="maximum">
-       <number>223</number>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOn</enum>
       </property>
+      <property name="widgetResizable">
+       <bool>true</bool>
+      </property>
+      <widget class="QWidget" name="scrollAreaWidgetContents">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>314</width>
+         <height>304</height>
+        </rect>
+       </property>
+      </widget>
      </widget>
     </item>
-    <item row="1" column="1" colspan="4">
-     <widget class="QLineEdit" name="CSV_Dialog_lineEdit"/>
-    </item>
-    <item row="3" column="6">
-     <widget class="QPushButton" name="Abort_pushButton">
+    <item row="3" column="9">
+     <widget class="QPushButton" name="Cancel_pushButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>150</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="text">
        <string>Abbrechen</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="5" colspan="2">
-     <widget class="QLineEdit" name="Type_Dialog_lineEdit"/>
-    </item>
-    <item row="0" column="5" colspan="2">
-     <widget class="QLabel" name="label_3">
+    <item row="3" column="0" colspan="2">
+     <widget class="QPushButton" name="OK_pushButton">
+      <property name="minimumSize">
+       <size>
+        <width>150</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="text">
-       <string>Datentyp</string>
+       <string>OK</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <spacer name="horizontalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="4" rowspan="4">
+     <widget class="QPushButton" name="addToTransmittedScrollBox_pushButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>30</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>-&gt;</string>
       </property>
      </widget>
     </item>
