Dataanalyser, GUI Bugfixes time.sleep durch qtimer ersetzt scpi commands gefixt dt algorithmus aufgeräumt terminalfenster eingebunden

--- a/ui_mainwindow.ui
+++ b/ui_mainwindow.ui
@@ -30,7 +30,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="UEB_Status_tab">
      <attribute name="title">
@@ -1626,7 +1626,7 @@ DOS mismatch threshold</string>
           <enum>Qt::ScrollBarAsNeeded</enum>
          </property>
          <property name="sizeAdjustPolicy">
-          <enum>QAbstractScrollArea::AdjustIgnored</enum>
+          <enum>QAbstractScrollArea::AdjustToContents</enum>
          </property>
          <property name="widgetResizable">
           <bool>true</bool>
@@ -1639,6 +1639,12 @@ DOS mismatch threshold</string>
             <width>1101</width>
             <height>520</height>
            </rect>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
           </property>
          </widget>
         </widget>
