--- a/ui_mainwindow.ui
+++ b/ui_mainwindow.ui
@@ -21,6 +21,9 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="tabWidget">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>-4</x>
@@ -30,7 +33,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="UEB_Status_tab">
      <attribute name="title">
@@ -281,6 +284,9 @@
        <property name="leftMargin">
         <number>5</number>
        </property>
+       <property name="topMargin">
+        <number>5</number>
+       </property>
        <property name="rightMargin">
         <number>5</number>
        </property>
@@ -288,6 +294,9 @@
         <widget class="QLabel" name="label_66">
          <property name="text">
           <string>Übertragene IDs</string>
+         </property>
+         <property name="margin">
+          <number>2</number>
          </property>
         </widget>
        </item>
@@ -305,63 +314,9 @@
             <x>0</x>
             <y>0</y>
             <width>172</width>
-            <height>515</height>
+            <height>507</height>
            </rect>
           </property>
-          <widget class="QWidget" name="gridLayoutWidget_12">
-           <property name="geometry">
-            <rect>
-             <x>0</x>
-             <y>0</y>
-             <width>181</width>
-             <height>511</height>
-            </rect>
-           </property>
-           <layout class="QGridLayout" name="recorded_id_layout">
-            <item row="3" column="0">
-             <widget class="QLabel" name="recorded_label_4">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="recorded_label_2">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item row="4" column="0">
-             <widget class="QLabel" name="recorded_label_5">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="recorded_label_1">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="recorded_label_3">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item row="5" column="0">
-             <widget class="QLabel" name="recorded_label_6">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
          </widget>
         </widget>
        </item>
@@ -622,6 +577,9 @@ Controller lesen</string>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_4">
+       <property name="leftMargin">
+        <number>5</number>
+       </property>
        <property name="topMargin">
         <number>12</number>
        </property>
@@ -647,8 +605,8 @@ Controller lesen</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>590</width>
-            <height>458</height>
+            <width>586</width>
+            <height>454</height>
            </rect>
           </property>
          </widget>
@@ -663,6 +621,9 @@ Controller lesen</string>
          </property>
          <property name="text">
           <string>UEB Übertragungseinstellungen</string>
+         </property>
+         <property name="margin">
+          <number>2</number>
          </property>
         </widget>
        </item>
@@ -1480,126 +1441,6 @@ DOS mismatch threshold</string>
       </layout>
      </widget>
     </widget>
-    <widget class="QWidget" name="ADC_tab">
-     <attribute name="title">
-      <string>ADC Einstellungen</string>
-     </attribute>
-     <widget class="QWidget" name="gridLayoutWidget_7">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>481</width>
-        <height>551</height>
-       </rect>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_7">
-       <property name="leftMargin">
-        <number>10</number>
-       </property>
-       <item row="2" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_18"/>
-       </item>
-       <item row="6" column="0">
-        <widget class="QCheckBox" name="checkBox_8">
-         <property name="text">
-          <string>CheckBox</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0">
-        <widget class="QCheckBox" name="checkBox_7">
-         <property name="text">
-          <string>CheckBox</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1">
-        <widget class="QLabel" name="label_52">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_17"/>
-       </item>
-       <item row="4" column="1">
-        <widget class="QLabel" name="label_51">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QCheckBox" name="checkBox_6">
-         <property name="text">
-          <string>CheckBox</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QCheckBox" name="checkBox_5">
-         <property name="text">
-          <string>CheckBox</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLabel" name="label_54">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="1">
-        <widget class="QLabel" name="label_53">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLabel" name="label_48">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLabel" name="label_49">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QDoubleSpinBox" name="doubleSpinBox_19"/>
-       </item>
-       <item row="3" column="1">
-        <widget class="QLabel" name="label_50">
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="1">
-        <widget class="QPushButton" name="pushButton_14">
-         <property name="text">
-          <string>PushButton</string>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="0">
-        <widget class="QPushButton" name="pushButton_15">
-         <property name="text">
-          <string>PushButton</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </widget>
     <widget class="QWidget" name="Terminal_tab">
      <attribute name="title">
       <string>Terminal</string>
@@ -1689,6 +1530,9 @@ DOS mismatch threshold</string>
      </item>
      <item>
       <widget class="QPushButton" name="reset_Button">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Reset</string>
        </property>
@@ -1696,6 +1540,9 @@ DOS mismatch threshold</string>
      </item>
      <item>
       <widget class="QPushButton" name="default_Button">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Default</string>
        </property>
