--- a/ui_parameter_dialog.ui
+++ b/ui_parameter_dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>714</width>
+    <width>891</width>
     <height>408</height>
    </rect>
   </property>
@@ -18,36 +18,34 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>711</width>
+     <width>891</width>
      <height>401</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="1">
-     <spacer name="horizontalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label_2">
+    <item row="0" column="6">
+     <widget class="QLabel" name="label">
       <property name="text">
-       <string>Verfügbare IDs</string>
+       <string>Übertragene IDs</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="9">
-     <widget class="QPushButton" name="addNewUserID">
+    <item row="0" column="4" rowspan="5">
+     <widget class="QPushButton" name="addToTransmittedScrollBox_pushButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>30</width>
+        <height>16777215</height>
+       </size>
+      </property>
       <property name="text">
-       <string>Eigene Parameter
-hinzufügen</string>
+       <string>-&gt;</string>
       </property>
      </widget>
     </item>
@@ -64,15 +62,8 @@ hinzufügen</string>
       </property>
      </spacer>
     </item>
-    <item row="0" column="6">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>Übertragene IDs</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="7">
-     <spacer name="horizontalSpacer">
+    <item row="0" column="1">
+     <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
@@ -84,7 +75,18 @@ hinzufügen</string>
       </property>
      </spacer>
     </item>
-    <item row="1" column="6" colspan="4">
+    <item row="0" column="9">
+     <widget class="QPushButton" name="addNewUserID">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="text">
+       <string>Eigene Parameter
+hinzufügen</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="6" colspan="4">
      <widget class="QScrollArea" name="usedID_scrollArea">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -106,14 +108,47 @@ hinzufügen</string>
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>315</width>
-         <height>304</height>
+         <width>390</width>
+         <height>282</height>
         </rect>
        </property>
       </widget>
      </widget>
     </item>
-    <item row="1" column="0" rowspan="2" colspan="4">
+    <item row="0" column="7">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Verfügbare IDs</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <spacer name="horizontalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="2" column="0" rowspan="2" colspan="4">
      <widget class="QScrollArea" name="availableID_scrollArea">
       <property name="verticalScrollBarPolicy">
        <enum>Qt::ScrollBarAlwaysOn</enum>
@@ -129,14 +164,70 @@ hinzufügen</string>
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>314</width>
-         <height>304</height>
+         <width>419</width>
+         <height>282</height>
         </rect>
        </property>
       </widget>
      </widget>
     </item>
-    <item row="3" column="9">
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>ID</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>Dateiname</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Datenformat</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="3">
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string>Trennzeichen (nur String)</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="6">
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>ID</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="7">
+     <widget class="QLabel" name="label_8">
+      <property name="text">
+       <string>Dateiname</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="8">
+     <widget class="QLabel" name="label_9">
+      <property name="text">
+       <string>Datenformat</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="9">
+     <widget class="QLabel" name="label_10">
+      <property name="text">
+       <string>Trennzeichen (nur String)</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="8" colspan="2">
      <widget class="QPushButton" name="Cancel_pushButton">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -155,7 +246,7 @@ hinzufügen</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="0" colspan="2">
+    <item row="4" column="6" colspan="2">
      <widget class="QPushButton" name="OK_pushButton">
       <property name="minimumSize">
        <size>
@@ -165,38 +256,6 @@ hinzufügen</string>
       </property>
       <property name="text">
        <string>OK</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2">
-     <spacer name="horizontalSpacer_3">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="0" column="4" rowspan="4">
-     <widget class="QPushButton" name="addToTransmittedScrollBox_pushButton">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>30</width>
-        <height>16777215</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>-&gt;</string>
       </property>
      </widget>
     </item>
